Build Fosstars in entrypoint.sh
Part of #3

--- a/action.yml
+++ b/action.yml
@@ -25,4 +25,5 @@ runs:
     - ${{ inputs.report-branch }}
     - ${{ inputs.report-file }}
     - ${{ inputs.badge-file }}
+    - ${{ inputs.fosstars-version }}
     - ${{ inputs.token }}
